--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,4 +39,11 @@ jobs:
       - name: Run tests
         env:
           MONGO_URI: mongodb://localhost:27017/Node-CI-CD-test
-        run: npm test
+        run: npm test:coverage
+
+      - name: Upload test result
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage
+          path: coverage/lcov-report
