--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Run tests
         env:
           MONGO_URI: mongodb://localhost:27017/Node-CI-CD-test
-        run: npm test:coverage
+        run: npm run test:coverage
 
       - name: Upload test result
         if: always()
