--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,13 +41,8 @@ jobs:
           MONGO_URI: mongodb://localhost:27017/Node-CI-CD-test
         run: npm run test:coverage
 
-      - name: Upload test result
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage
-          path: coverage/lcov-report
-          retention-days: 1
+      - name: Build application
+        run: npm run build
 
   deploy-dev:
     # if: github.ref == 'refs/heads/master' && github.event_name == 'push'
@@ -64,6 +59,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
+      - name: Run tests
+        run: npm run test:coverage
 
       - name: Setup environment variables
         run: |
