--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,23 +25,23 @@ jobs:
           --health-retries 5
 
     steps:
-      - name: Checkout code
+      - name: 📥 Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: 🟢 Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
 
-      - name: Install dependencies
+      - name: 📦 Install dependencies
         run: npm install
 
-      - name: Run tests
+      - name: 🧪 Run tests
         env:
           MONGO_URI: mongodb://localhost:27017/Node-CI-CD-test
         run: npm run test:coverage
 
-      - name: Build application
+      - name: 🔨 Build application
         run: npm run build
 
   deploy-dev:
@@ -60,23 +60,23 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
-      - name: Checkout code
+      - name: 📥 Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: 🟢 Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 22
 
-      - name: Install dependencies
+      - name: 📦 Install dependencies
         run: npm install
 
-      - name: Run tests
+      - name: 🧪 Run tests
         env:
           MONGO_URI: mongodb://localhost:27017/Node-CI-CD-test
         run: npm run test:coverage
 
-      - name: Setup environment variables
+      - name: 🔠 Setup environment variables
         run: |
           echo "PORT=${{ secrets.PORT }}" >> .env
           echo "MONGO_URI=${{ secrets.MONGO_URI }}" >> .env
@@ -85,38 +85,46 @@ jobs:
           echo "FEAT_HEALTH_CHECK=${{ secrets.FEAT_HEALTH_CHECK }}" >> .env
           echo "FEAT_AUTHENTICATION=${{ secrets.FEAT_AUTHENTICATION }}" >> .env
 
-      - name: Build application
+      - name: 🔨 Build application
         run: npm run build
 
-      - uses: actions/upload-artifact@v4
-        with:
-          name: dev-artifact
-          path: dist
+      - name: 🗜️ Zip production files
+        run: |
+          zip -r build.zip dist package.json .env
 
-      - uses: actions/download-artifact@v4
+      - name: ☁️ Upload artifact
+        uses: actions/upload-artifact@v4
         with:
-          name: dev-artifact
-          path: dist
+          name: backend-build
+          path: build.zip
+
+      - name: ☁️ Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: backend-build
+          path: .
 
       - name: Upload files to EC2
-        uses: appleboy/scp-action@v0.1.7
+        uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
-          source: dist/*
-          target: "/home/${{ secrets.EC2_USER }}/app"
+          source: "build.zip"
+          target: "/home/${{ secrets.EC2_USER }}"
 
-      - name: Restart application on EC2
-        uses: appleboy/ssh-action@v1
+      - name: 🔧 Run post-deploy commands
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           port: 22
           script: |
-            bash -l
-            cd /home/${{ secrets.EC2_USER }}/app
+            cd /home/${{ secrets.EC2_USER }}
+            unzip -o build.zip -d app
+            cd app
             ls -a
-            pm2 restart all || pm2 start dist/server.js --name "node-app"
+            npm ci --omit=dev
+            pm2 reload node-app || pm2 start dist/server.js --name node-app
