--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,39 +10,39 @@ on:
   workflow_dispatch:
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  # test:
+  #   runs-on: ubuntu-latest
 
-    services:
-      mongodb:
-        image: mongo:5.0
-        ports:
-          - 27017:27017
-        options: >-
-          --health-cmd "mongo --eval 'db.runCommand({ ping: 1 })'"
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+  #   services:
+  #     mongodb:
+  #       image: mongo:5.0
+  #       ports:
+  #         - 27017:27017
+  #       options: >-
+  #         --health-cmd "mongo --eval 'db.runCommand({ ping: 1 })'"
+  #         --health-interval 10s
+  #         --health-timeout 5s
+  #         --health-retries 5
 
-    steps:
-      - name: 📥 Checkout code
-        uses: actions/checkout@v4
+  #   steps:
+  #     - name: 📥 Checkout code
+  #       uses: actions/checkout@v4
 
-      - name: 🟢 Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
+  #     - name: 🟢 Set up Node.js
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: 22
 
-      - name: 📦 Install dependencies
-        run: npm install
+  #     - name: 📦 Install dependencies
+  #       run: npm install
 
-      - name: 🧪 Run tests
-        env:
-          MONGO_URI: mongodb://localhost:27017/Node-CI-CD-test
-        run: npm run test:coverage
+  #     - name: 🧪 Run tests
+  #       env:
+  #         MONGO_URI: mongodb://localhost:27017/Node-CI-CD-test
+  #       run: npm run test:coverage
 
-      - name: 🔨 Build application
-        run: npm run build
+  #     - name: 🔨 Build application
+  #       run: npm run build
 
   deploy-dev:
     # if: github.ref == 'refs/heads/master' && github.event_name == 'push'
@@ -99,7 +99,7 @@ jobs:
           path: build.zip
 
       - name: ☁️ Download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: backend-build
           path: .
