--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -115,16 +115,14 @@ jobs:
           target: "/home/${{ secrets.EC2_USER }}"
 
       - name: 🔧 Run post-deploy commands
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          port: 22
-          script: |
+        run: |
+          echo "Running post-deploy commands..."
+          ssh -i ${{ secrets.SSH_KEY }} ubuntu@${{ secrets.SERVER_HOST }} << 'EOF'
             cd /home/${{ secrets.EC2_USER }}
             unzip -o build.zip -d app
             cd app
             ls -a
             npm ci --omit=dev
             pm2 reload node-app || pm2 start dist/server.js --name node-app
+          EOF
+          echo "Post-deploy commands completed."
